# sradg-vision-pro

./: README.md
artifacts/arch/: README.md  VisionPro-smarter-reconciliation.pptx
code/: flow.txt
code/agent_creation_for_crew_automation/: README.md  pyproject.toml
code/agent_creation_for_crew_automation/src/agent_creation_for_crew_automation/: crew.py  main.py
code/agent_creation_for_crew_automation/src/agent_creation_for_crew_automation/config/: agents.yaml  tasks.yaml
code/crew_automation_for_anomaly_detection_and_resolution/: README.md  pyproject.toml
code/crew_automation_for_anomaly_detection_and_resolution/src/crew_automation_for_anomaly_detection_and_resolution/: crew.py  main.py
code/crew_automation_for_anomaly_detection_and_resolution/src/crew_automation_for_anomaly_detection_and_resolution/config/: agents.yaml  tasks.yaml
code/src/: app.py  prompts.txt  utils.py
code/src/anomally_detection/: README.md  corrected_data.csv  pyproject.toml
code/src/anomally_detection/inputs/: current_data.csv  historical_data.csv
code/src/anomally_detection/src/anomally_detection/: crew.py  main.py
code/src/anomally_detection/src/anomally_detection/config/: agents.yaml  tasks.yaml
code/src/data/: anomalies-old.csv  data_generator2.py  enhanced_mismatch_data.csv  sample_data.csv
code/src/data/data_gen_script/: data_generator.py
code/test/: test.py
outputs/: reconcilation_actions.csv
