[project]
name = "agent_creation_for_crew_automation"
version = "0.1.0"
description = "agent_creation_for_crew_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
agent_creation_for_crew_automation = "agent_creation_for_crew_automation.main:run"
run_crew = "agent_creation_for_crew_automation.main:run"
train = "agent_creation_for_crew_automation.main:train"
replay = "agent_creation_for_crew_automation.main:replay"
test = "agent_creation_for_crew_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
