[project]
name = "crew_automation_for_anomaly_detection_and_resolution"
version = "0.1.0"
description = "crew_automation_for_anomaly_detection_and_resolution using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crew_automation_for_anomaly_detection_and_resolution = "crew_automation_for_anomaly_detection_and_resolution.main:run"
run_crew = "crew_automation_for_anomaly_detection_and_resolution.main:run"
train = "crew_automation_for_anomaly_detection_and_resolution.main:train"
replay = "crew_automation_for_anomaly_detection_and_resolution.main:replay"
test = "crew_automation_for_anomaly_detection_and_resolution.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
